# cpp-coro

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  shell.nix
certs/: example.com.crt  example.com.key
gdb/: awaitable_backtrace.py  pretty_printer.py
src/: async_aliases.cpp  async_aliases.hpp  channel_stuff.cpp  channel_stuff.hpp  http_stuff.cpp  http_stuff.hpp  main.cpp  socket_stuff.cpp  socket_stuff.hpp  timeout_stuff.cpp  timeout_stuff.hpp  utils.cpp  utils.hpp
src/log/: log_stream.cpp  log_stream.hpp  logger.hpp
